--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@json-schema-spec/json-pointer": "^0.1.2",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
     "http-errors": "^2.0.0",
