--- a/packages/controllers/package.json
+++ b/packages/controllers/package.json
@@ -34,6 +34,7 @@
     "@json-schema-spec/json-pointer": "^0.1.2",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
+    "body-parser": "^1.20.2",
     "http-errors": "^2.0.0",
     "http-status-codes": "^2.3.0",
     "lodash": "^4.17.21",
