--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,21 +5,30 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "request": "launch",
       "type": "node",
-      "name": "vscode-jest-tests",
-      "request-raw": "launch",
+      "name": "Test controllers",
       "args": ["--runInBand"],
-      "cwd": "${workspaceFolder}",
+      "cwd": "${workspaceFolder}/packages/controllers",
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
       "program": "${workspaceFolder}/node_modules/jest/bin/jest"
     },
     {
+      "request": "launch",
       "type": "node",
-      "request-raw": "launch",
       "name": "Launch Example",
-      "program": "${workspaceFolder}/example/src/index.ts",
-      "outFiles": ["${workspaceFolder}/example/dist/**/*.js"]
+      "program": "${workspaceFolder}/examples/simple/src/index.ts",
+      "cwd": "${workspaceFolder}/examples/simple",
+      "outFiles": ["${workspaceFolder}/examples/simple/dist/**/*.js"]
+    },
+    {
+      "request": "launch",
+      "type": "node",
+      "name": "Launch Example OpenAPI builder",
+      "program": "${workspaceFolder}/examples/simple/src/build-swagger.ts",
+      "cwd": "${workspaceFolder}/examples/simple",
+      "outFiles": ["${workspaceFolder}/examples/simple/dist/**/*.js"]
     }
   ]
 }
