--- a/package.json
+++ b/package.json
@@ -11,5 +11,11 @@
   "workspaces": [
     "packages/*",
     "examples/*"
-  ]
+  ],
+  "dependencies": {
+    "swagger-ui-express": "^5.0.0"
+  },
+  "devDependencies": {
+    "@types/swagger-ui-express": "^4.1.6"
+  }
 }
