--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "type": "git",
     "url": "git@github.com:SunsetFi/simply-openapi.git"
   },
+  "scripts": {
+    "prepare": "is-ci || husky install"
+  },
   "workspaces": [
     "packages/*",
     "examples/*"
@@ -16,6 +19,9 @@
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
-    "@types/swagger-ui-express": "^4.1.6"
+    "@types/swagger-ui-express": "^4.1.6",
+    "husky": "^8.0.3",
+    "is-ci": "^3.0.1",
+    "lint-staged": "^15.1.0"
   }
 }
