--- a/examples/simple/package.json
+++ b/examples/simple/package.json
@@ -24,11 +24,13 @@
     "lodash": "^4.17.21",
     "openapi3-ts": "^4.1.2",
     "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^5.0.0",
     "type-fest": "^4.7.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.201",
+    "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^9.0.7"
   }
 }
