--- a/packages/controllers/.npmignore
+++ b/packages/controllers/.npmignore
@@ -1,4 +1,7 @@
-.gitignore
-tsconfig.json
-jest.config.js
+/coverage
+/src
 **/*.spec.js
+.lintstagedrc.json
+jest.config.js
+tsconfig.json
+TODO.md
