Fix schemas failing to compile due to example prop

--- a/packages/controllers/package.json
+++ b/packages/controllers/package.json
@@ -14,7 +14,8 @@
     "prebuild": "npm run clean",
     "build": "tsc -p src",
     "test": "jest --coverage",
-    "format": "prettier --write \"./src/**/*.{ts,js}\""
+    "format": "prettier --write \"./src/**/*.{ts,js}\"",
+    "prepublish": "npm run build"
   },
   "keywords": [
     "express",
