Fix union typing causing issues on decorators

--- a/packages/controllers/src/tsconfig.json
+++ b/packages/controllers/src/tsconfig.json
@@ -8,6 +8,7 @@
     "experimentalDecorators": true,
     "stripInternal": true,
     "strict": true,
+    "removeComments": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "../dist",
     "declaration": true,
