--- a/examples/simple/package.json
+++ b/examples/simple/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "clean": "rimraf dist dts",
     "prebuild": "npm run clean",
-    "build": "tsc -p src",
-    "build:docs": "node dist/build-swagger.js",
+    "build": "run-p build:server build:docs",
+    "build:server": "tsc -p src",
+    "build:docs": "ts-node src/build-openapi.ts",
     "format": "prettier --write \"./src/**/*.{ts,js}\"",
     "start": "node dist/index.js"
   },
@@ -31,6 +32,8 @@
   "devDependencies": {
     "@types/lodash": "^4.14.201",
     "@types/swagger-ui-express": "^4.1.6",
-    "@types/uuid": "^9.0.7"
+    "@types/uuid": "^9.0.7",
+    "npm-run-all": "^4.1.5",
+    "ts-node": "^10.9.1"
   }
 }
