--- a/examples/simple/package.json
+++ b/examples/simple/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@simply-openapi/controllers": "^1.0.0",
     "express": "^4.18.2",
+    "http-errors": "^2.0.0",
     "http-status-codes": "^2.3.0",
     "lodash": "^4.17.21",
     "openapi3-ts": "^4.1.2",
