--- a/packages/controllers-ast/package.json
+++ b/packages/controllers-ast/package.json
@@ -1,43 +1,36 @@
 {
-  "name": "@simply-openapi/jest-describe-openapi",
+  "name": "@simply-openapi/controllers-ast",
   "version": "1.0.0",
-  "description": "Jest testing utilities for OpenAPI contracts.",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:SunsetFi/simply-openapi.git"
-  },
+  "description": "Typescript AST utilities for projects using @simply-openapi/controllers.",
   "main": "dist/index.js",
   "types": "dts/index.d.ts",
   "files": [
     "/dist",
     "/dts",
-    "/readme.md"
+    "readme.md"
   ],
   "scripts": {
     "clean": "rimraf dist dts",
     "prebuild": "npm run clean",
     "build": "tsc -p tsconfig.release.json",
+    "test": "jest --coverage",
     "format": "prettier --write \"./src/**/*.{ts,js}\"",
     "prepublish": "npm run build"
   },
   "keywords": [
+    "typescript",
     "openapi",
-    "swagger",
-    "jest"
+    "controllers",
+    "simply-openapi"
   ],
   "author": "SunsetFi",
   "license": "MIT",
-  "dependencies": {
-    "@json-schema-spec/json-pointer": "^0.1.2",
-    "lodash": "^4.17.21"
-  },
-  "peerDependencies": {
-    "jest": "^29.7.0"
-  },
   "devDependencies": {
+    "@simply-openapi/controllers": "^1.5.0",
     "@types/jest": "^29.5.11",
     "jest": "^29.7.0",
-    "rimraf": "^5.0.5",
-    "typescript": "^5.3.3"
+    "prettier": "^3.1.1",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2"
   }
 }
