--- a/packages/controllers/package.json
+++ b/packages/controllers/package.json
@@ -28,12 +28,10 @@
     "router",
     "typescript",
     "swagger",
-    "openapi"
+    "openapi",
+    "simply-openapi"
   ],
-  "author": {
-    "name": "SunsetFi",
-    "email": "sunsetfidev@gmail.com"
-  },
+  "author": "SunsetFi",
   "license": "MIT",
   "dependencies": {
     "@json-schema-spec/json-pointer": "^0.1.2",
@@ -46,6 +44,10 @@
     "openapi3-ts": "^4.1.2",
     "type-fest": "^4.6.0"
   },
+  "peerDependencies": {
+    "express": "^4.18.2",
+    "reflect-metadata": "0.1.13"
+  },
   "devDependencies": {
     "@jest-mock/express": "^2.0.2",
     "@types/express": "^4.17.0",
@@ -55,7 +57,6 @@
     "@types/lodash": "^4.14.200",
     "@types/node": "^17.0.30",
     "express": "^4.18.2",
-    "is-ci": "^3.0.1",
     "jest": "^29.7.0",
     "jest-extended": "^4.0.2",
     "prettier": "^3.1.0",
@@ -64,9 +65,5 @@
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
-  },
-  "peerDependencies": {
-    "express": "^4.18.2",
-    "reflect-metadata": "0.1.13"
   }
 }
