--- a/packages/controllers-ast/package.json
+++ b/packages/controllers-ast/package.json
@@ -11,11 +11,11 @@
   ],
   "scripts": {
     "clean": "rimraf dist dts",
-    "prebuild": "npm run clean",
+    "prebuild": "pnpm run clean",
     "build": "tsc -p tsconfig.release.json",
     "test": "jest --coverage",
     "format": "prettier --write \"./src/**/*.{ts,js}\"",
-    "prepublish": "npm run build"
+    "prepublish": "pnpm run build"
   },
   "keywords": [
     "typescript",
