--- a/packages/controllers/package.json
+++ b/packages/controllers/package.json
@@ -16,11 +16,11 @@
   ],
   "scripts": {
     "clean": "rimraf dist dts",
-    "prebuild": "npm run clean",
+    "prebuild": "pnpm run clean",
     "build": "tsc -p tsconfig.release.json",
     "test": "jest --coverage",
     "format": "prettier --write \"./src/**/*.{ts,js}\"",
-    "prepublish": "npm run build"
+    "prepublish": "pnpm run build"
   },
   "keywords": [
     "express",
@@ -51,12 +51,13 @@
   },
   "devDependencies": {
     "@jest-mock/express": "^2.0.2",
+    "@types/body-parser": "^1.19.6",
     "@types/express": "^4.17.21",
     "@types/http-errors": "^2.0.3",
     "@types/jest": "^29.5.7",
     "@types/json-schema": "^7.0.14",
     "@types/lodash": "^4.14.200",
-    "@types/node": "^17.0.30",
+    "@types/node": "^25.2.0",
     "@types/type-is": "^1.6.6",
     "express": "^4.18.2",
     "jest": "^29.7.0",
