--- a/packages/controllers/package.json
+++ b/packages/controllers/package.json
@@ -14,10 +14,14 @@
     "/dts",
     "/readme.md"
   ],
+  "engines": {
+    "node": ">= 18"
+  },
   "scripts": {
     "clean": "rimraf dist dts",
     "prebuild": "pnpm run clean",
     "build": "tsc -p tsconfig.release.json",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
     "test": "jest --coverage",
     "format": "prettier --write \"./src/**/*.{ts,js}\"",
     "prepublish": "pnpm run build"
@@ -46,20 +50,21 @@
     "type-is": "^1.6.18"
   },
   "peerDependencies": {
-    "express": "^4.18.2",
+    "express": "^4 || ^5",
     "reflect-metadata": "0.1.13"
   },
   "devDependencies": {
-    "@jest-mock/express": "^2.1.0",
+    "@jest-mock/express": "^3.0.0",
+    "@jest/types": "^30.2.0",
     "@types/body-parser": "^1.19.6",
-    "@types/express": "^4.17.25",
+    "@types/express": "^5.0.0",
     "@types/http-errors": "^2.0.5",
     "@types/jest": "^29.5.14",
     "@types/json-schema": "^7.0.15",
     "@types/lodash": "^4.17.23",
     "@types/node": "^25.2.0",
     "@types/type-is": "^1.6.7",
-    "express": "^4.22.1",
+    "express": "^5.2.1",
     "jest": "^29.7.0",
     "jest-extended": "^4.0.2",
     "prettier": "^3.8.1",
